# azure-iot-sdk-c

./: CMakeLists.txt
jenkins/: analysis_linux.sh  analysis_win.cmd
sdk_analysis/: CMakeLists.txt
sdk_analysis/memory_analysis/: CMakeLists.txt  memory_analysis.c
